--- a/config/requirements.txt
+++ b/config/requirements.txt
@@ -1,7 +1,12 @@
 Django==1.5
+Fabric==1.6.0
 South==0.7.6
 Werkzeug==0.8.3
+coverage==3.6
 django-debug-toolbar==0.9.4
+django-discover-runner==0.3
 django-extensions==1.1.1
+paramiko==1.10.0
+pycrypto==2.6
 six==1.2.0
 wsgiref==0.1.2
